wrap-fixed

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -34,9 +34,10 @@ hr {
   object-fit: cover;
 }
 
-.object-wrap {
-  height: 25vh;
-  width: 20vw;
+.card-img {
+  min-height: 100%;
+  object-fit: cover;
+  min-width: 100%;
 }
 
 
